--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,50 @@
-body{
-  all: unset;
+*{
+  font-size: 20pt;
 }
-main{
+.main{
   display: flex;
   margin: 3vh;
-  align-content: space-between;
-  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 container{
+  width: 30vw;
   display: flex;
   flex-direction: column;
+  margin: 3vh;
+  padding: 1vh;
+}
+
+form{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 15vh;
+  justify-content: space-between;  
+  padding: 5vh 0; 
+}
+
+label{
+  align-self: center;
+}
+
+.bracelets{
+  padding: 10vh 0;
+}
+
+.bracelet{
+  padding: 1vh;
+  background-color: lightgray;
+}
+
+container p{
+  margin: 2vh;
+}
+
+.counter{
+  display: flex;
+  flex-direction: column;
+  max-height: 70vh;
+  flex-wrap: wrap;
 }
